versao com swagger
